# dinkleberg

./: .gitignore  .prettierignore  README.md  nx.json  package-lock.json  package.json  pyproject.toml
.github/actions/setup-repository/: action.yml
.github/workflows/: ci.yml
examples/fastapi/: project.json  pyproject.toml
examples/fastapi/src/fastapi_example/: __main__.py  api.py  example_service.py
libs/dinkleberg/: LICENSE.txt  README.md  project.json  pyproject.toml
libs/dinkleberg-abc/: project.json  pyproject.toml
libs/dinkleberg-abc/src/dinkleberg_abc/: __init__.py  dependency_scope.py
libs/dinkleberg-fastapi/: project.json  pyproject.toml
libs/dinkleberg-fastapi/src/_dinkleberg_fastapi/: di.py
libs/dinkleberg-fastapi/src/dinkleberg_fastapi/: __init__.py
libs/dinkleberg-fastapi/tests/: conftest.py  test_integration.py
libs/dinkleberg/src/dinkleberg/: __init__.py  dependency.py  dependency_configurator.py  dependency_inspector.py  dependency_resolution_error.py  dependency_resolution_exception.py  dependency_scope.py  descriptor.py  resolution_step.py  typing.py
libs/dinkleberg/src/dinkleberg/fastapi/: __init__.py  di.py  request_scope.py
libs/dinkleberg/tests/: conftest.py  test_abstracts.py  test_async_race_condition.py  test_callables.py  test_cancellation.py  test_configurations.py  test_fastapi_integration.py  test_functions.py  test_generators.py  test_generics.py  test_inspector.py  test_misuse.py  test_my_class.py  test_overrides.py  test_performance.py  test_resolves.py  test_scopes.py  test_special_types.py  test_third_parties.py  test_transients.py
