[project]
name = "dinkleberg-neighbourhood"
version = "0.0.0"
classifiers = [ "Private :: Do Not Upload" ]
requires-python = ">=3.13"
dependencies = [
 "dinkleberg",
 "dinkleberg-abc",
 "dinkleberg-fastapi",
 "fastapi-example",
]

[tool.uv.workspace]
members = [ "libs/dinkleberg", "libs/dinkleberg-abc", "libs/dinkleberg-fastapi", "examples/fastapi" ]

[tool.uv.sources.dinkleberg]
workspace = true

[tool.uv.sources.dinkleberg-abc]
workspace = true

[tool.uv.sources.dinkleberg-fastapi]
workspace = true

[tool.uv.sources.fastapi-example]
workspace = true

[dependency-groups]
dev = [
 "flake8>=7.3.0",
 "pydantic>=2.12.5",
 "pytest>=9.0.2",
 "pytest-asyncio>=1.3.0",
]

