[project]
name = "dinkleberg-neighbourhood"
version = "0.0.0"
classifiers = [ "Private :: Do Not Upload" ]
requires-python = ">=3.12"
dependencies = [
 "dinkleberg",
 "fastapi-example",
]

[tool.uv.workspace]
members = [ "libs/dinkleberg", "examples/fastapi" ]

[tool.uv.sources.dinkleberg]
workspace = true

[tool.uv.sources.fastapi-example]
workspace = true

[dependency-groups]
dev = [
 "flake8>=7.3.0",
 "httpx>=0.28.1",
 "pydantic>=2.12.5",
 "pytest>=9.0.2",
 "pytest-asyncio>=1.3.0",
]

