[project]
name = "dinkleberg-abc"
version = "1.0.0"
description = "Abstractions for dinkleberg."
requires-python = ">=3.12"
keywords = ["dependency", "package-management", "automation", "abstractions"]
dependencies = []

[project.urls]
Homepage = "https://github.com/DavidVollmers/dinkleberg"
Documentation = "https://github.com/DavidVollmers/dinkleberg/blob/main/README.md"
Repository = "https://github.com/DavidVollmers/dinkleberg.git"
Issues = "https://github.com/DavidVollmers/dinkleberg/issues"
Changelog = "https://github.com/DavidVollmers/dinkleberg/blob/main/CHANGELOG.md"
