[project]
name = "dinkleberg-fastapi"
version = "0.3.0"
description = "FastAPI integrations for dinkleberg."
requires-python = ">=3.13"
keywords = ["dependency", "package-management", "automation", "fastapi"]
dependencies = []

[dependency-groups]
dev = [
    "fastapi>=0.128.0",
]

[project.urls]
Homepage = "https://github.com/DavidVollmers/dinkleberg"
Documentation = "https://github.com/DavidVollmers/dinkleberg/blob/main/libs/dinkleberg/README.md"
Repository = "https://github.com/DavidVollmers/dinkleberg.git"
Issues = "https://github.com/DavidVollmers/dinkleberg/issues"
Changelog = "https://github.com/DavidVollmers/dinkleberg/blob/main/CHANGELOG.md"

