[project]
name = "dinkleberg-fastapi"
version = "1.0.1"
description = "FastAPI integrations for dinkleberg."
requires-python = ">=3.12"
keywords = ["dependency", "package-management", "automation", "fastapi"]
dependencies = [
    "dinkleberg-abc>=1.0.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.128.0",
]

[project.urls]
Homepage = "https://github.com/DavidVollmers/dinkleberg"
Documentation = "https://github.com/DavidVollmers/dinkleberg/blob/main/README.md"
Repository = "https://github.com/DavidVollmers/dinkleberg.git"
Issues = "https://github.com/DavidVollmers/dinkleberg/issues"
Changelog = "https://github.com/DavidVollmers/dinkleberg/blob/main/CHANGELOG.md"

