[project]
name = "dinkleberg"
version = "3.0.0"
description = "Your friendly neighbour when it comes to dependency management."
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dependency", "package-management", "automation", "fastapi"]
dependencies = []

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.135.3",
]

[project.urls]
Homepage = "https://github.com/DavidVollmers/dinkleberg"
Documentation = "https://github.com/DavidVollmers/dinkleberg/blob/main/README.md"
Repository = "https://github.com/DavidVollmers/dinkleberg.git"
Issues = "https://github.com/DavidVollmers/dinkleberg/issues"
Changelog = "https://github.com/DavidVollmers/dinkleberg/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
